--- a/public/signup.html
+++ b/public/signup.html
@@ -2,9 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-				integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  				crossorigin="anonymous">
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   </script>
   <script src="/socket.io/socket.io.js"></script>
   <link rel="stylesheet" href="css/signup.css">
