edited fields for upload page

--- a/public/upload-data.html
+++ b/public/upload-data.html
@@ -18,8 +18,7 @@
                       Upload your CSV File
                         <input type="file" name="File Upload" id="txtFileUpload" accept=".csv"/>
                         <br>
-                        First name: <input class="name-input" id="fname" type="text" name="fname"><br>
-                  Last name: <input class="name-input" id="lname" type="text" name="lname"><br>
+                        Username: <input class="name-input" id="user" type="text" name="fname"><br>
                   Boat: <input id="boat" type="text"><br>
                   Workout Type: <input id="workout" type="text"><br>
                   <button id="submitUpload">submit</button>
