fixed some upload errors

--- a/public/upload-data.html
+++ b/public/upload-data.html
@@ -68,11 +68,11 @@
         ]
       }]};
       console.log(json);
-    function uploadData() {
+    /*function uploadData() {
       $.post('data-upload', {data:JSON.stringify(json)}, function(res) {
         console.log("success");
       });
-    }
+    }*/
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/upload.js"></script> 
