--- a/public/upload-data.html
+++ b/public/upload-data.html
@@ -2,19 +2,38 @@
 <html>
   <head>
     <title>Upload Data</title>
+    <link rel="stylesheet" href="/css/upload_data.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS --><!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
   </head>
   <body>
     <div class="container">
+      Workouts:
+          <select id="workouts">
+              <option selected disabled>Choose Workout</option>
+            </select>
       <div id="dvImportSegments" class="fileupload ">
         <fieldset>
           Upload your CSV File
           <input type="file" name="File Upload" id="txtFileUpload" accept=".csv"/>
-          <br>
-          Username: <input class="name-input" id="user" type="text" name="fname"><br>
-          Boat: <input id="boat" type="text"><br>
-          Workout Type: <input id="workout" type="text"><br>
+          <br><!-- 
+          Username:
+          <div class="userlist-dropdown">
+          <button onclick="myFunction()" class="dropbtn">Available Users</button>
+            <div id="user-dropdown" class="dropdown-content">
+            </div>
+          </div> -->
+          Username:
+          <select id="username">
+              <option selected disabled>Choose Athlete</option>
+            </select><br>
+          Boat:
+          <select id="boat">
+              <option selected disabled>Choose Boat</option>
+            </select><br>
+          <hr/>
+          Create New Workout: <input id="newWorkout" type="checkbox"><br>
+          Workout Type: <input id="workoutType" type="text"><br>
           <button id="submitUpload">submit</button>
         </fieldset>
       </div>
