HTML Validated signup.html

--- a/public/signup.html
+++ b/public/signup.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  </script>
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <link rel="stylesheet" href="css/signup.css">
   <title>Sign Up</title>
@@ -28,9 +27,8 @@
 		<p class="input-paragraph"> Confirm Password: </p>
 		<input type="text" id="confirm-password-input" class="login-input"/><br> <br>
 		<button onclick="sendNewUserInfo()" value="Sign Up">Sign Up</button>
-		 <p id="error-message"><p> 
+		 <p id="error-message"><p>
 	</div>
+  <script src='/js/signup.js'></script>
 </body>
-<script src='/js/signup.js'></script>
-
 </html>
