--- a/public/upload-data.html
+++ b/public/upload-data.html
@@ -1,61 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Upload Data</title>
-    <script
-    src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/upload_data.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified CSS --><!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
   </head>
   <body>
-    <button id="button" onClick="uploadData();">Upload Hard-Coded Data</button>
-    <script>
-    /* userID's used rather than names because of chance of repeat names */
-    /*
-     * code of 0 means that everything is new,
-     * code of 1 if anything else is completely new
-    */
-    /*
-    * WorkoutID is -1 if new
-    */
-    var json = {"code": 0,
-      "workoutID": -1,
-      "workoutType": "240x4",
-      "workoutDate": "fake-date",
-      "boatID": 1,
-      "numUsers": 3,
-      "users":[
-        {"username": "fakeuser",
-        "startTime": "fake-start-time",
-        "numberRows": 2,
-        "per-stroke-data": [
-          [1, 24.1, 0,	"00:00:13.1", "00:04:28.8", 1.86, "00:00:00.0",	0,	38,	2,	17.3,	0,	90,	237,	-51,	4,	28,	8,	278,	489,	544,	-13,	41.8548621,	-71.3752703],
-          [2, 24.1, 0,	"00:00:13.1", "00:04:28.8", 1.86, "00:00:00.0",	0,	38,	2,	17.3,	0,	90,	237,	-51,	4,	28,	8,	278,	489,	544,	-13,	41.8548621,	-71.3752703]
-        ]
-      },
-        {"username": "fakeuser1",
-        "numberRows": 2,
-        "startTime": "fake-start-time",
-        "per-stroke-data": [
-          [1, 24.1, 0, "00:00:13.1", "00:04:28.8", 1.86, "00:00:00.0",	0,	38,	2,	17.3,	0,	90,	237,	-51,	4,	28,	8,	278,	489,	544,	-13,	41.8548621,	-71.3752703],
-          [2, 24.1, 0,	"00:00:13.1", "00:04:28.8", 1.86, "00:00:00.0",	0,	38,	2,	17.3,	0,	90,	237,	-51,	4,	28,	8,	278,	489,	544,	-13,	41.8548621,	-71.3752703]
-        ]
-      },
-        {"username": "fakeuser2",
-        "numberRows": 2,
-        "startTime": "fake-start-time",
-        "per-stroke-data": [
-          [1, 24.1, 0,	"00:00:13.1", "00:04:28.8", 1.86, "00:00:00.0",	0,	38,	2,	17.3,	0,	90,	237,	-51,	4,	28,	8,	278,	489,	544,	-13,	41.8548621,	-71.3752703],
-          [2, 24.1, 0,	"00:00:13.1", "00:04:28.8", 1.86, "00:00:00.0",	0,	38,	2,	17.3,	0,	90,	237,	-51,	4,	28,	8,	278,	489,	544,	-13,	41.8548621,	-71.3752703]
-        ]
-      }]};
-      console.log(json.users[0]);
-    function uploadData() {
-      $.post('data-upload', json, function(res) {
-        console.log("success");
-      });
-    }
-    </script>
+    <div class="container">
+      Workouts:
+          <select id="workouts">
+              <option selected disabled>Choose Workout</option>
+            </select>
+      <div id="dvImportSegments" class="fileupload ">
+        <fieldset>
+          Upload your CSV File
+          <input type="file" name="File Upload" id="txtFileUpload" accept=".csv"/>
+          <br><!-- 
+          Username:
+          <div class="userlist-dropdown">
+          <button onclick="myFunction()" class="dropbtn">Available Users</button>
+            <div id="user-dropdown" class="dropdown-content">
+            </div>
+          </div> -->
+          Username:
+          <select id="username">
+              <option selected disabled>Choose Athlete</option>
+            </select><br>
+          Boat:
+          <select id="boat">
+              <option selected disabled>Choose Boat</option>
+            </select><br>
+          <hr/>
+          Create New Workout: <input id="newWorkout" type="checkbox"><br>
+          Workout Type: <input id="workoutType" type="text"><br>
+          <button id="submitUpload">submit</button>
+        </fieldset>
+      </div>
+    </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/upload.js"></script>
   </body>
 </html>
