made more progress. Completed deleting users, changed login page + users database, made deleting users and boats possible.

--- a/public/signup.html
+++ b/public/signup.html
@@ -21,14 +21,19 @@
 		<input type="text" id="first-name-input" class="login-input" />
 		<p class="input-paragraph"> Last Name: </p>
 		<input type="text" id="last-name-input" class="login-input"/>
-		<p class="input-paragraph"> Username: </p>
+    <p class="input-paragraph"> Email: </p>
+    <input type="text" id="email-input" class="login-input"/>
+    <p class="input-paragraph"> Class Year: </p>
+    <input type="text" id="class-year-input" class="login-input"/>
+    <p class="input-paragraph"> Username: </p>
 		<input type="text" id="username-input" class="login-input"/>
 		<p class="input-paragraph"> Password: </p>
 		<input type="text" id="password-input" class="login-input" />
 		<p class="input-paragraph"> Confirm Password: </p>
-		<input type="text" id="confirm-password-input" class="login-input"/><br> <br>
+		<input type="text" id="confirm-password-input" class="login-input"/>
+    <br> <br>
 		<button onclick="sendNewUserInfo()" value="Sign Up">Sign Up</button>
-		 <p id="error-message"><p> 
+		 <p id="error-message"><p>
 	</div>
 </body>
 <script src='/js/signup.js'></script>
