--- a/public/signup.html
+++ b/public/signup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
-  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  </script>
   <script src="/socket.io/socket.io.js"></script>
   <link rel="stylesheet" href="css/signup.css">
   <title>Sign Up</title>
@@ -20,12 +21,17 @@
 		<input type="text" id="first-name-input" class="login-input" />
 		<p class="input-paragraph"> Last Name: </p>
 		<input type="text" id="last-name-input" class="login-input"/>
-		<p class="input-paragraph"> Username: </p>
+    <p class="input-paragraph"> Email: </p>
+    <input type="text" id="email-input" class="login-input"/>
+    <p class="input-paragraph"> Class Year: </p>
+    <input type="text" id="class-year-input" class="login-input"/>
+    <p class="input-paragraph"> Username: </p>
 		<input type="text" id="username-input" class="login-input"/>
 		<p class="input-paragraph"> Password: </p>
 		<input type="text" id="password-input" class="login-input" />
 		<p class="input-paragraph"> Confirm Password: </p>
-		<input type="text" id="confirm-password-input" class="login-input"/><br> <br>
+		<input type="text" id="confirm-password-input" class="login-input"/>
+    <br> <br>
 		<button onclick="sendNewUserInfo()" value="Sign Up">Sign Up</button>
 		 <p id="error-message"><p>
 	</div>
