--- a/public/login.html
+++ b/public/login.html
@@ -5,24 +5,20 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/login.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100" rel="stylesheet">
   <link rel="stylesheet" href="css/login.css">
   <title>Login</title>
 </head>
 
 <body>
-	<div id="wrapper">
-		
-		<h1 id="freeSpeed">FREESPEED</h1>
-		<h1>Login</h1>
-		<input type="text" placeholder="Username" id="username-input" /> <br> <br>
-		<input type="text" placeholder="Password" id="password-input" /> <br> <br>
-		<button onclick="sendLoginCredentials()" value="Login" id="login-submit">Sign In</button>
-		<p id="error-paragraph"></p> 
-		<p> New User? <a href="/sign-up">Sign Up</a> </p>
-		<a href="/auth/google">Signin with google</a>
-		<dix id="placeholder"></dix>
+	<div id="header">
+		<div id="box">
+		<h1 id="freeSpeed">FreeSpeed</h1>
+		<a href="/auth/google"><button id="signin">Sign In</button></a>
+		</div>
 	</div>
+	
 </body>
 <script src="/js/login.js"></script>
 </html>
