made endpoints and changes for uploading and deleting data

--- a/public/upload-data.html
+++ b/public/upload-data.html
@@ -15,7 +15,7 @@
       <div id="dvImportSegments" class="fileupload ">
         <fieldset>
           Upload your CSV File
-          <input type="file" name="File Upload" id="txtFileUpload" accept=".csv"/>
+          <input type="file" name="File Upload" multiple="true" id="txtFileUpload" accept=".csv"/>
           <br><!-- 
           Username:
           <div class="userlist-dropdown">
