fixed bug for multiple csv uploads

--- a/public/upload-data.html
+++ b/public/upload-data.html
@@ -28,7 +28,7 @@
           </div> -->
           Username:
 
-          <select id="username">
+          <select id="username" class="username">
               <option selected>Choose Athlete...</option>
             </select><br>
           Boat:
