--- a/public/manage-data-user.html
+++ b/public/manage-data-user.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Manage Team Data </title>
+    <title> Manage {{username}} </title>
+    <link rel="stylesheet" href="/css/home.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="/js/manage-user.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="username" content={{username}}>
   </head>
   <body>
     <div id="main-container">
       <h1>firstName lastName</h1>
       <table>
-
+        <tr>
+          <th>id</th>
+          <th>Date</th>
+          <th>Type</th>
+          <th></th>
+        </tr>
+        <tr>
+          <td>id</td>
+          <td>Date</td>
+          <td>Type</td>
+          <td></td>
+        </tr>
       </table>
+      <hr>
+
     </div>
   </body>
 </html>
